# react-native-scc

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  NitroSccKv.podspec  README.md  app.plugin.js  jest.config.js  nitro.json  package-lock.json  package.json
__tests__/: adapters.test.ts  hooks.test.ts  kv.test.ts  mockNitro.ts
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/scckv/: HybridSccKvPlatformContext.kt  NitroSccKvPackage.kt
cpp/: HybridSccKv.hpp  HybridSccKvInstance.hpp  scc_kv_ffi.h
crates/kv-core/: Cargo.toml
crates/kv-core/benches/: kv_bench.rs
crates/kv-core/src/: crypto.rs  error.rs  lib.rs  notify.rs  record.rs  registry.rs  snapshot.rs  store.rs  sweeper.rs  value.rs  wal.rs
crates/kv-core/src/store/: mutation.rs  recovery.rs  tests.rs
crates/kv-core/src/wal/: framing.rs  sweep.rs  tests.rs
crates/kv-core/tests/: concurrency.rs  features.rs  persistence.rs  recovery.rs
crates/kv-ffi/: Cargo.toml  cbindgen.toml
crates/kv-ffi/src/: batch.rs  buffers.rs  error.rs  handle.rs  lib.rs  multi_get.rs  tests.rs
crates/kv-ffi/src/tests/: features.rs  listeners.rs  multi_get.rs  transactions.rs
example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
example/src/: benchmark.ts  demos.tsx  sections.tsx  self-test.ts  storage.ts  theme.ts  ui.tsx
ios/: HybridSccKvPlatformContext.swift
lib/: hooks.d.ts  hooks.js  index.d.ts  index.js  kv.d.ts  kv.js  types.d.ts
lib/adapters/: jotai.d.ts  jotai.js  redux.d.ts  redux.js  zustand.d.ts  zustand.js
lib/specs/: SccKv.nitro.d.ts  SccKvInstance.nitro.d.ts  SccKvPlatformContext.nitro.d.ts
scripts/: build-android.sh  build-ios.sh  postinstall.js  prepack.js
src/: hooks.ts  index.ts  kv.ts  types.ts
src/adapters/: jotai.ts  redux.ts  zustand.ts
src/specs/: SccKv.nitro.ts  SccKvInstance.nitro.ts  SccKvPlatformContext.nitro.ts
