[workspace]
members = ["crates/kv-core", "crates/kv-ffi"]
resolver = "2"

[workspace.dependencies]
chacha20poly1305 = "0.11"
compact_str = "0.9"
crc32fast = "1.5"
criterion = "0.8"
crossbeam-channel = "0.5"
foldhash = "0.2"
getrandom = "0.4"
kv-core = { path = "crates/kv-core" }
memmap2 = "0.9"
scc = "3.8"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = "symbols"
