[package]
name = "kv-core"
version.workspace = true
edition = "2024"
publish = false

[dependencies]
chacha20poly1305 = { workspace = true }
compact_str = { workspace = true }
crc32fast = { workspace = true }
crossbeam-channel = { workspace = true }
foldhash = { workspace = true }
getrandom = { workspace = true }
memmap2 = { workspace = true }
scc = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "kv_bench"
harness = false
